src/kpackage/private/package_p.h
@@ -30,6 +30,25 @@
 namespace KPackage
 {
 
+//KPackage is is normally used on the stack, explicitly shared and isn't a QObject
+//however PackageJob is given a pointer, which could be deleted at any moment
+//leaving the PackageJob with a dangling pointer
+//we need some way to invalidate the Package* pointer if it gets deleted
+
+//we can't just take a copy in the packagejob as we need to detatch and update the *original* KPackage object
+//without changing anything else which happened to share the same KPackage::d
+
+//TODO KF6 - make KPackage::install()'s KJob return a new Package copy rather than modify
+//an existing opbject.
+class PackageDeletionNotifier : public QObject
+{
+Q_OBJECT
+public:
+    static PackageDeletionNotifier* self();
+Q_SIGNALS:
+    void packageDeleted(Package *package);
+};
+
 class ContentStructure
 {
 public:
@@ -90,3 +109,4 @@ public:
 }
 
 #endif
+
