autotests/plasmoidpackagetest.h
@@ -39,6 +39,7 @@ private Q_SLOTS:
     void isValid();
     void filePath();
     void entryList();
+    void noCrashOnAsyncInstall();
 
     void packageInstalled(KJob *j);
     void packageUninstalled(KJob *j);
